--- a/src/App.css
+++ b/src/App.css
@@ -19,4 +19,13 @@
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    color: brown;
+}
+
+.heading2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+    color: lightgray;
 }
